wishlist visibility fixed

--- a/src/Main/resources/Webshop/css/shop-homepage.css
+++ b/src/Main/resources/Webshop/css/shop-homepage.css
@@ -320,6 +320,14 @@ footer {
     	display: none;
     }
 
+    #wishlistvisibility{
+        display: none;
+    }
+
+    #wishlistvisibilityshow{
+        display: block;
+    }
+
     #registervisibility{
         display: block;
     }
